<resources>
    <string name="app_name">Wallet Tracker</string>
    <string name="title_activity_menu">Dashboard</string>
    <string name="title_activity_login">Google Account Sign In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navDrawer_title1">Wallet Tracker Management</string>
    <string name="navDrawer_WalletAccount">Wallet Account</string>
    <string name="navDrawer_TrxCategory">Transaction Category</string>
    <string name="navDrawer_TrxHistory">Transaction History</string>
    <string name="navDrawer_SyncData">Backup Data Now</string>
    <string name="navDrawer_title2">Last Backup - %s</string>
    <string name="navDrawer_title3">My Account</string>
    <string name="navDrawer_SignOut">Sign Out</string>
    <string name="filterBySpecific">Filter by Specific Date</string>
    <string name="filterByRange">Filter by Date Range</string>
    <string name="DummyDate">12/12/2018</string>
    <string name="DummyAccountName">Personal Account</string>
    <string name="DummyAmount1">$ 0.00</string>
    <string name="DummyCategory">Food and Drink</string>
    <string name="DummyMonth">(July)</string>
    <string name="DummyAmount2">$ 0.00</string>
    <string name="DBAccountLabel">Account : </string>
    <string name="DBRecentLabel">Recent Transaction List</string>
    <string name="DBCurrentBalLabel">Current Account Balance : </string>
    <string name="DBExpensesLabel">This Month Expenses : </string>
    <string name="DBOverviewLabel">Past 31 Days Expenses CashFlow</string>
    <string name="DBGraphLoading">Loading Graph Data…</string>
    <string name="DBGraphInfo">(Pinch to Zoom, Touch to View Details)</string>
    <string name="NewTrxTypeLabel">Transaction Type : </string>
    <string name="NewTrxCategoryLabel">Transaction Category : </string>
    <string name="NewAmountInput">Amount</string>
    <string name="NewRemarksInput">Remarks</string>
    <string name="NewTrxSubmit">Submit Transaction</string>
    <string name="NewTrxReminderLabel">Please fill up the Empty Fields</string>
    <string name="NewTrxDateInput">Date</string>
    <string name="NewTrxTimeInput">Time</string>
    <string name="NewTrxSelectedAccLabel">Selected Account : </string>
    <string name="NewTrxDefaultAmount">Enter Amount</string>
    <string name="DetailsTrxTypeLabel">Transaction Type : </string>
    <string name="DetailsTrxCategoryLabel">Transaction Category : </string>
    <string name="DetailsAmountInput">Amount (Editable)</string>
    <string name="DetailsTrxRemarksInput">Remarks (Editable)</string>
    <string name="DetailsTrxDeleteSubmit">Delete Transaction</string>
    <string name="DetailsTrxReminderLabel">Selected Account : </string>
    <string name="DetailsTrxDateInput">Date (Editable)</string>
    <string name="DetailsTrxUpdateSubmit">Edit Transaction Info</string>
    <string name="DetailsTrxTimeInput">Time (Editable)</string>
    <string name="WVAGoToCWA">New Account</string>
    <string name="VWAReminderLabel">Only 5 Accounts is Allowed to be Create</string>
    <string name="CWARemindLabel">Please Fill Up the Empty Fields</string>
    <string name="CWAAccNameInput">Account Name</string>
    <string name="CWAAccBalanceInput">Initial Balance</string>
    <string name="CWACreateSubmit">Create Account Now</string>
    <string name="DWAReminderLabel">Click on the Field to Edit</string>
    <string name="DWAAccNameInput">Account Name (Editable)</string>
    <string name="DWAAccBalanceInput">Initial Balance (Editable)</string>
    <string name="DWAUpdateSubmit">Update Account Info</string>
    <string name="DWADeleteSubmit">Delete Account</string>
    <string name="CTVGoToCTC">New Category</string>
    <string name="CTVTrxTypeLabel">Transaction Type : </string>
    <string name="CTVReminderLabel">Use the Drop Down List for Filter Data</string>
    <string name="CTCTrxTypeLabel">Transaction Type : </string>
    <string name="CTCReminderLabel">Please fill up the empty field</string>
    <string name="CTCCategoryNameInput">Category Name</string>
    <string name="CTCCreateSubmit">Create Category Now</string>
    <string name="DTCReminderLabel">Click on the Field to Edit</string>
    <string name="DTCTrxTypeLabel">Transaction Type : </string>
    <string name="DTCCategoryNameInput">Category Name (Editable)</string>
    <string name="DTCUpdateSubmit">Edit Category Info</string>
    <string name="DTCDeleteSubmit">Delete Category</string>
    <string name="THSAccountLabel">Account : </string>
    <string name="THSTrxTypeLabel">Transaction Type : </string>
    <string name="THSDateLabel">Date : </string>
    <string name="THSFliterButtonLabel">Filter</string>
    <string name="THSTrxCategoryLabel">Transaction Category : </string>
    <string name="THSIncomeLabel">Income: $1000</string>
    <string name="THSExpenseLabel">Expense: $2000</string>
    <string name="THSBalanceLabel">Balance: $5000</string>
    <string name="THRToLabel">To : </string>
    <string name="THRFromLabel">From : </string>
    <string name="THRAccountLabel">Account : </string>
    <string name="THRTrxTypeLabel">Transaction Type : </string>
    <string name="THRFilterButtonLabel">Filter</string>
    <string name="THRIncomeLabel">Income: $1000</string>
    <string name="THRExpenseLabel">Expense: $2000</string>
    <string name="THRBalanceLabel">Balance: $5000</string>
    <string name="THRTrxCategory">Transaction Category : </string>
    <string name="THRStartDateInput">Start Date</string>
    <string name="THREndDateInput">End Date</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivide">/</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnDot">.</string>
    <string name="btnEqual">=</string>
    <string name="btnDelete">Del</string>
    <string name="btnClear">Clear</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnCancel">Cancel</string>
    <string name="calCustomDialogLabel">Transaction Amount</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="statusDefault">Default</string>
    <string name="statusNotDefault">New</string>
    <string name="statusSuccess">Success</string>
    <string name="noResult">No Search Found</string>
    <string name="statusFail">Failed: </string>
    <string name="defaultAccountName">Personal</string>
    <string name="defaultAccountBalance">0.0</string>
    <string name="maxAccount">5</string>
    <string name="allYear">All Years</string>
    <string name="allMonth">All Months</string>
    <string name="allDay">All Days</string>
    <string name="allCategory">All Category</string>
    <string name="allType">All Type</string>
    <string name="deletedDataIndicator"> (Deleted)</string>
    <string name="trxHistoryNavSpecificKey">Specific</string>
    <string name="trxHistoryNavRangeKey">Range</string>
    <string name="userProfileKey">UserProfile</string>
    <string name="selectedAccount">SelectedAccount</string>
    <string name="trxTypePassArgKey">TrxTypeSelection</string>
    <string name="walletAccountPassArgKey">walletAccountSelection</string>
    <string name="trxCategoryPassArgKey">trxCategorySelection</string>
    <string name="transactionPassArgKey">transactionSelection</string>
    <string name="userIDServiceKey">userID</string>
    <string name="trxAmountPassArgKey">trxAmount</string>
    <string name="regExNoCharacterOnly">^[a-zA-Z]{4,}(?: [a-zA-Z]+){0,2}$</string>
    <string name="maxAccNameInputField">15</string>
    <string name="timeFormat12">hh:mm:ss a</string>
    <string name="timeFormat24">HH:mm:ss</string>
    <string name="dateFormat">yyyy/MM/dd</string>
    <string name="monthFormat">MMM</string>
    <string name="GoogleSignInOptionKey">866059954529-u7ki0u0si1veh1ul9slartd6ejnq0js7.apps.googleusercontent.com</string>
    <string name="REQUEST_CODE_SIGN_IN">1</string>
    <string name="JobServiceID">123</string>
    <string name="walletAccountRealm">walletaccount.realm</string>
    <string name="transactionRealm">transaction.realm</string>
    <string name="transactionCategoryRealm">transactionCategory.realm</string>
    <string-array name="defaultTrxCategorySpinner">
        <item>All Type</item>
        <item>Expense</item>
        <item>Income</item>
    </string-array>
    <string-array name="defaultTrxTypeSpinner">
        <item>Expense</item>
        <item>Income</item>
    </string-array>
    <string-array name="months">
        <item>All Months</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="UserUID">userUID</string>
    <string name="WalletAccountID">walletAccountID</string>
    <string name="TransactionCategoryID">transactionCategoryID</string>
    <string name="TransactionID">transactionID</string>
    <string name="TransactionCategoryType">transactionCategoryType</string>
    <string name="WalletAccountName">walletAccountName</string>
    <string name="TransactionCategoryName">transactionCategoryName</string>
    <string name="TransactionDate">transactionDate</string>
    <string name="TransactionTime">transactionTime</string>
    <string name="navigatedIndicate">Navigated</string>
    <string name="trxHistoryNavigatedIndicate">TrxHistoryNavigated</string>
    <string name="disableNavigatedIndicate">Disable</string>
    <string name="additionStatus">+</string>
    <string name="subtractionStatus">-</string>
    <string name="multiplicationStatus">*</string>
    <string name="divisionStatus">/</string>
    <string name="decimalFormat">#.##</string>
    <string name="NotANumber">NaN</string>
    <string name="maxCalAmount">999999999.99</string>
    <string name="minCalAmount">-999999999.99</string>
    <string name="TransactionCategoryFirebase">TransactionCategory</string>
    <string name="WalletAccountFirebase">WalletAccount</string>
    <string name="TransactionFirebase">Transaction</string>
    <string name="loadingIndication">Loading…</string>
    <string name="loadingTitle">Loading</string>
    <string name="loadingMessage">Signing with your Google Account…</string>
    <string name="exitAppConfirmation">Please click BACK again to exit</string>
    <string name="dashBoardFragmentTitle">Dashboard</string>
    <string name="createWalletAccountFragmentTitle">Create Wallet Account</string>
    <string name="viewWalletAccountFragmentTitle">Wallet Account List</string>
    <string name="detailsWalletAccountFragmentTitle">Wallet Account Details</string>
    <string name="newTrxFragmentTitle">Add New Transaction</string>
    <string name="viewTrxCategoryFragmentTitle">Transaction Category List</string>
    <string name="createTrxCategoryFragmentTitle">Create Transaction Category</string>
    <string name="detailsTrxCategoryFragmentTitle">Transaction Category Details</string>
    <string name="detailsTransactionFragmentTitle">Transaction Details</string>
    <string name="trxHistoryFragmentTitle">Transaction History</string>
</resources>